# BTP

./: .gitignore  README.md  activate.sh  error.json  pyproject.toml  utils.py  visualizer.ipynb
modelling/: callbacks.py  config.yaml  dataloaders.py  dataset.py  models.py  train_eval.py
modelling/SDA/: config.yaml  train_eval.py  trainer.py
modelling/representation_learning/: clustering_analysis.ipynb  config.yaml  dataloaders.py
modelling/representation_learning/models/: auto_encoders.py  modules.py  sparse_denoisingAE.py  time_embedder.py
modelling/representation_learning/train_utils/: sweep.py  sweep_config.yaml  sweep_full_config.yaml  train_eval.py  trainer.py
modelling/stage_1/: models.py
modelling/stage_classifier/: config.yaml  scheduler.sh  train_eval.py  trainer.py
pics/: FullSparseDenoisingAE
time_freq/: fft.py  life_cycle_staging.py  vibration_feature_extraction.py
wandb/: latest-run
wandb/run-20241104_105915-9kb52gwa/: run-9kb52gwa.wandb
wandb/run-20241104_110313-p4j04s7o/: run-p4j04s7o.wandb
wandb/run-20241104_110640-xf2dwxmj/: run-xf2dwxmj.wandb
wandb/run-20241104_110800-q56q0fst/: run-q56q0fst.wandb
wandb/run-20241104_110912-qa1g5ti0/: run-qa1g5ti0.wandb
wandb/run-20241104_111209-918p953w/: run-918p953w.wandb
wandb/run-20241104_111554-awr7ls4v/: run-awr7ls4v.wandb
wandb/run-20241104_112728-59jj2db6/: run-59jj2db6.wandb
wandb/run-20241104_120136-6qpxxlak/: run-6qpxxlak.wandb
wandb/run-20241104_120622-7u7ji3kj/: run-7u7ji3kj.wandb
wandb/run-20241105_154631-c88dvmlt/: run-c88dvmlt.wandb
wandb/run-20241105_154718-g4kc3bhs/: run-g4kc3bhs.wandb
wandb/run-20241105_173903-4cg0pwfm/: run-4cg0pwfm.wandb
wandb/run-20241105_174840-uup6hh3a/: run-uup6hh3a.wandb
wandb/run-20241105_174938-1273nswb/: run-1273nswb.wandb
wandb/run-20241105_175243-yi8rnx2q/: run-yi8rnx2q.wandb
wandb/run-20241105_175436-51nnywaw/: run-51nnywaw.wandb
wandb/run-20241105_180649-xdoiqh60/: run-xdoiqh60.wandb
(+45 files in other folders)
