[tool.poetry]
name = "vibration-analysis-btp"
version = "0.1.0"
description = "The project is for analysing vibration effect on various mechanical components. Predicting when failure could occur."
authors = ["Sar2580P <sporwal1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.23.0"
polars = "^1.4.1"
requests = "^2.32.3"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"
pyarrow = "^17.0.0"
nbformat = "^5.10.4"
tqdm = "^4.66.5"
statsmodels = "^0.14.2"
dask = "^2024.8.2"
distributed = "^2024.8.2"
pydantic = "^2.9.2"
matplotlib = "^3.9.2"
torch = "^2.5.1"
pytorch-lightning = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
